--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -2,6 +2,7 @@
 @import url('./form.css');
 @import url('./gallery.css');
 @import url('./loader.css');
+@import url('./load-more.css');
 
 :root {
   font-family: Montserrat, sans-serif;
