--- a/src/css/form.css
+++ b/src/css/form.css
@@ -8,12 +8,15 @@
 }
 
 .search-input {
-  border-radius: 4px;
   width: 272px;
   height: 40px;
+  border-radius: 4px;
   border: 1px solid #808080;
+  color: #808080;
   padding-left: 16px;
+  font-family: Montserrat;
   font-size: 16px;
+  letter-spacing: 0.04em;
 }
 
 .search-input:hover {
@@ -28,14 +31,16 @@
   width: 91px;
   height: 40px;
   border-radius: 8px;
-  background-color: #4e75ff;
-  color: white;
+  background-color: #4E75FF;
   border: none;
+  color: #ffffff;
+  font-family: Montserrat;
   font-size: 16px;
   font-weight: 500;
+  line-height: 24px;
   letter-spacing: 0.04em;
 }
 
 .search-btn:hover {
-  background-color: #6c8cff;
+  background-color: #6C8CFF;
 }
